--- a/src/background.html
+++ b/src/background.html
@@ -9,7 +9,7 @@
   <script src="js/stock.js" type="text/javascript"></script>
   <script src="js/symbol_manage.js" type="text/javascript"></script>
   <script src="js/position.js" type="text/javascript"></script>
-  <script src="js/alert.js" type="text/javascript"></script>
+  <!--script src="js/alert.js" type="text/javascript"></script-->
   <script src="js/page_background.js" type="text/javascript"></script>
 </head>
 <body onload="backgroundPageInit()">
