--- a/src/popup.html
+++ b/src/popup.html
@@ -5,14 +5,14 @@
   <script src="js/common.js" type="text/javascript"></script>
   <script src='js/exchanges_and_indexes.js' type='text/javascript'></script>
   <script src="js/data.js" type="text/javascript"></script>
-  <script src="js/alert.js" type="text/javascript"></script>
+  <!--script src="js/alert.js" type="text/javascript"></script-->
   <script src="js/config.js" type="text/javascript"></script>
   <script src="js/stock.js" type="text/javascript"></script>
   <script src="js/symbol_manage.js" type="text/javascript"></script>
   <script src="js/position.js" type="text/javascript"></script>
   <script src="js/page_popup.js" type="text/javascript"></script>
   <script src="js/view_indexes.js" type="text/javascript"></script>
-  <script src="js/view_alerts.js" type="text/javascript"></script>
+  <!--script src="js/view_alerts.js" type="text/javascript"></script-->
   <link rel="stylesheet" href="css/common.css" type="text/css" charset="utf-8" />
   <link rel="stylesheet" href="css/popup.css" type="text/css" charset="utf-8" />
   <link rel="stylesheet" href="css/view_indexes.css" type="text/css" charset="utf-8" />
